# TensorflowCPP

./: CMakeLists.txt  FDO.cxx  README.md  TFConfig.hxx  VectorExpressionBenchmark  api.cpp  arrays_from_tensors.cpp  cauchy.cpp  configure.sh  convert.cpp  example.cpp  julia.jl  python.py  tensor3DAdd.cpp  tensorAdd.cpp  tensorConversion.cpp  tensorMul.cpp  tensorMultiScope.cpp  tensorScale.cpp  tensorSingleScope.cpp  tensorSumExpression.cpp  tensorboard.sh  vizualisation.cpp
misc/: input.cpp  matmul.cpp
