cmake_minimum_required(VERSION 3.13)

find_package(TensorflowCC REQUIRED)

# add_executable(example example.cpp)
# add_executable(api api.cpp)
# add_executable(cauchy cauchy.cpp)
# add_executable(matmul matmul.cpp)
# add_executable(input input.cpp)
# add_executable(arrays_from_tensors arrays_from_tensors.cpp)
add_executable(tensorAdd tensorAdd.cpp)
# add_executable(tensorMul tensorMul.cpp)
# add_executable(tensorScale tensorScale.cpp)
# add_executable(vizualisation vizualisation.cpp)
# add_executable(tensorSingleScope tensorSingleScope.cpp)
# add_executable(tensorMultiScope tensorMultiScope.cpp)
# add_executable(tensorSumExpression tensorSumExpression.cpp)
# add_executable(convert convert.cpp)

# target_link_libraries(example TensorflowCC::Shared)
# target_link_libraries(api TensorflowCC::Shared)
# target_link_libraries(cauchy TensorflowCC::Shared)
# target_link_libraries(matmul TensorflowCC::Shared)
# target_link_libraries(input TensorflowCC::Shared)
# target_link_libraries(arrays_from_tensors TensorflowCC::Shared)
target_link_libraries(tensorAdd TensorflowCC::Shared)
# target_link_libraries(tensorMul TensorflowCC::Shared)
# target_link_libraries(tensorScale TensorflowCC::Shared)
# target_link_libraries(vizualisation TensorflowCC::Shared)
# target_link_libraries(tensorSingleScope TensorflowCC::Shared)
# target_link_libraries(tensorMultiScope TensorflowCC::Shared)
# target_link_libraries(tensorSumExpression TensorflowCC::Shared)
# target_link_libraries(convert TensorflowCC::Shared)